# tex-compiler

./: LICENSE  README.md  compileTex.py  pyproject.toml
src/texcompiler/: CmdArgs.py  TexCompiler.py  __init__.py
testing/test1/: test.tex  testScript.py
testing/test2/: test2.bib  test2.tex  testScript2.py
texcompiler/: CmdArgs.py  Defaults.py  TexCompiler.py  __init__.py  clean.py  cmd_args.py  defaults.py  tex_compiler.py  utils.py
