[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "texcompiler"
version = "0.2"
authors = [
  { name="Joseph Pate", email="patex019@umn.edu" },
]
description = "Utility package to make compiling tex files with custom style sheets easier."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheFineStructureConstant/tex-compiler"
